# lsp-glib

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  meson.build
.github/: FUNDING.yml
.github/workflows/: ci.yml
debian/: changelog  control  copyright
examples/server/: meson.build  server.vala
src/: meson.build  protocol.vala
src/client/: LanguageClient.vala
src/protocol/: Header.vala
src/server/: LanguageServer.vala
subprojects/: jsonrpc-glib.wrap
tests/: meson.build  server.vala
